# cmake_learning

./: README.md
cmake_add_library/Step1/: CMakeLists.txt  tutorial.cxx
cmake_add_library/Step1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_add_library/Step1_build/MathFunctions/: Makefile  cmake_install.cmake
cmake_usage_requirement/: README.md
cmake_usage_requirement/Step1/: CMakeLists.txt
cmake_usage_requirement/Step1/MathFunctions/: MathFunctions.h  mysqrt.cxx
cmake_usage_requirement/Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
cmake_usage_requirement/Step1_build/MathFunctions/: Makefile  cmake_install.cmake
